# CCSDS-Compression-C

./: .gitattributes  .gitignore  CMakeLists.txt  CompressionDocumentation  Doxyfile  Doxyfile0  Doxyfile0.bak  README.md  build.sh  build_routine.sh  compare_predictors.sh  data_locale.csv  fresh_test.sh  generate_test_cases.sh  load_test_image.sh  loop_predictor.sh  main.c  make_tests.sh  requirements.txt  run_c_predictor.sh  run_python_predictor.sh  run_test.sh  test_c_predictor.sh  test_data.txt  test_predictors.sh  test_python_predictor.sh
.VSCodeCounter/2023-07-26_13-51-01/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-07-26_13-52-26/: details.md  diff-details.md  diff.md  diff.txt  results.json  results.md  results.txt
.VSCodeCounter/2023-07-26_13-52-53/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-07-26_13-53-04/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-07-29_15-04-05/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-08-05_11-32-28/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-08-19_23-14-29/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-05-29_18-02-16/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
Python/: prepare_hImage.py
data/constants/: predictor.CONST
data/temp/: _100x100x100_0.UHI  _100x200x100_0.UHI  _3x3x3_0.UHI  _640x512x640_0.UHI
data/test-images/: indian_pines.UHI  indian_pines.csv  indian_pines_pred.UHI
doc/docbook/: annotated.xml  constants_8c.xml  constants_8c__incl.dot  constants_8c_a6acd65af9a2f057ad3f0891038799e5b_icgraph.dot  constants_8c_af84e7b9bd8c4fa1203b0040adf941d8d_icgraph.dot  csv-io_8c.xml  csv-io_8c__incl.dot  csv-io_8c_a214fc383a5cb483508da7bb0449a9528_cgraph.dot  csv-io_8c_a214fc383a5cb483508da7bb0449a9528_icgraph.dot  csv-io_8c_aba677341d6fd704867c56e0b5d6f3fc3_cgraph.dot  csv-io_8c_aba677341d6fd704867c56e0b5d6f3fc3_icgraph.dot  decoder_8c.xml  decoder_8c__incl.dot  decoder_8c_a92568f6a10fcb23b4699402e71a02177_cgraph.dot  decoder_8c_ab711a30163f1252d05ce42c1982c8af7_icgraph.dot  dir_22d374d00b31754c70ea025f8d28506b.xml  dir_2fcae24043d6c8d9b3f3b422e373032f.xml  dir_2fcae24043d6c8d9b3f3b422e373032f_dep.dot  dir_310c81af5b5b2a1864c3ebfe09cb7a06.xml  dir_428a955cd1dcf08ef5b7d9b0293e4d17.xml  dir_48f859ddecfe4a7a92f5284d7813d2b7.xml  dir_5c982d53a68cdbcd421152b4020263a9.xml  dir_5ccf6f5f6f8f5a0c68d52188c0c1e2bd.xml  dir_63772b626f2709090f0bdca0f40827b4.xml  dir_63772b626f2709090f0bdca0f40827b4_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_70468730f0c354a354bfa0a2dbc63183.xml  dir_7837fde3ab9c1fb2fc5be7b717af8d79.xml  dir_83b6a697835ddc3a114ddfd5666c7cf2.xml  dir_83b6a697835ddc3a114ddfd5666c7cf2_dep.dot  dir_88daf05616196eb210c6c538937e567d.xml  dir_895dbb3563cbc00b89d480ddc20be1a2.xml  dir_8b4d779243a4c1ff83e0785b9ca9e30c.xml  dir_a8f5dd5631cff2e293db83b46625e3aa.xml  dir_acb9e55bfefdf4d43f13fff6aa240ad7.xml  dir_bcb0e1c297d4eac1568cd8ae7fb42a08.xml  dir_bcb0e1c297d4eac1568cd8ae7fb42a08_dep.dot  dir_bda9db4dee5220dce83fe6b2b34fd167.xml  dir_c22e1dfb7d788f5e80a585f157d215e9.xml  (+192 more)
doc/html/: annotated.html  annotated_dup.js  body_8h_source.html  bug.html  classes.html  constants_8c.html  (+677 more)
include/: constants.h  fileio.h  generate_image.h  image.h  image_instance.h  math_functions.h  predictor.h
main/: compressor.c  decompressor.c  image_handler.c
python/: compression.py  csv_io.py  display_debugging.py  file_compare.py  file_stats.py  generate_perlin_image.py  helperlib.py  image_test.py  mat_to_csv.py  perlin_image.py  predictor_eg.py  prepare_hImage.py  run_predictor.py  test_compression.py
results/: CRESULT_100x100x100_0_predicted.csv  PYTHONRESULT_100x100x100_0_predicted.csv  raw.csv
scripts/: build_routine.sh  clean-rebuild.sh  test_reconstructor.sh  testing.sh
src/: cache_predictor.c  constants.c  csv-io.c  decoder.c  encoder_body.c  encoder_constants.c  encoder_helper.c  file_IO.c  fileio.c  generate_image.c  hash_table.c  header.c  image.c  image_instance.c  legacy.c  linear_algebra.c  load_constants.c  local_differences.c  local_sum.c  locale_buffer.c  logs.c  main.c  math_functions.c  perlin_noise.c  predictor.c  quantizer.c  reconstructor.c  sample_representative.c  stream_encoder.c  synthetic_image_generator.c  table.c  test_UHI.c  test_predictor.c  test_varInt.c  uhi_io.c  varIntFile_IO.c  weights.c
(+6053 files in other folders)
